--- a/static/reset.css
+++ b/static/reset.css
@@ -1,3 +1,7 @@
+/*폰트*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,8 +51,9 @@ html, body{
   width: 100%;
   height: 100%;
   font-family: 'Noto Sans KR', 'Roboto', sans-serif;
+  color: #333333;
+  background-color: #ffffff;
 }
-
 a{
   text-decoration: none;
 }
