--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,3 @@
-/*폰트*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 /**헤더**/
 .header{
   width: 100%;
@@ -10,7 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  background-color: cornflowerblue;
+  box-shadow: 0px 3px 20px #f0f0f0;
 }
 
 .logo{
@@ -46,13 +42,14 @@
 .video_play{
   width: 80%;
   height: 50%;
-  background-color: red;
+  background-color:gree;
+  box-shadow: 0px 13px 20px #f0f0f0;
 }
 
 .video_information{
   width: 80%;
   height: 12%;
-  margin: 15px 0 30px 0;
+  margin: 20px 0 30px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,14 +75,14 @@
 }
 
 .rank_text{
-  font-size: 1rem;
+  font-size: 0.95rem;
   color: #3ea6ff;
   font-weight: 400;
 }
 .name_text{
   font-size: 1.7rem;
   font-weight: 500;
-  margin: 0.3rem 0 0.8rem 0;
+  margin: 0.5rem 0 0.8rem 0;
 }
 .views_text{
   font-size: 0.85rem;
@@ -103,7 +100,7 @@
 .youtuber_name_text{
   font-size: 1.4rem;
   padding-top: 0.2rem;
-  letter-spacing: 1.2px;
+  letter-spacing: 1px;
 }
 
 .subscriber_number{
@@ -113,27 +110,47 @@
 }
 
 .like, .dislike{
-  width: 48px;
-  height: 48px;
+  width: 80px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   margin: 0 5px;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   color: #cccccc;
+}
+
+.info_like_number{
+  margin-top: 8px;
+  font-size: 0.5rem;
 }
 
 .dislike{
   transform: scaleX(-1);
 }
 
+.dislike, .info_like_number{
+  transform: none;
+}
+
+.fa-thumbs-up:hover{
+  transition: 0.35s;
+  color: #3ea6ff;
+}
+
+.fa-thumbs-down:hover{
+  transition: 0.35s;
+  color: #fa4e4e;
+}
+
 .video_input_chat{
   width: 80%;
   height: 12%;
 }
+
 .user_input_chat{
   width: 100%;
-
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -151,7 +168,17 @@
   width: 94%;
   height: 35px;
   border: none;
-  border-bottom: 1.5px solid #333333;
+  border-bottom: 1.5px solid #cccccc;
+}
+
+.user_comment:focus{
+  outline: none;
+  border-bottom: 1.8px solid #3ea6ff;
+}
+
+.user_comment:hover{
+  border-bottom: 1.8px solid #3ea6ff;
+  transition: 0.6s;
 }
 
 .user_comment_send{
@@ -162,7 +189,16 @@
   border: none;
   float: right;
 }
-input:focus{outline: none;}
+
+.user_comment_send:focus{
+  outline: none;
+}
+
+.user_comment_send:hover{
+  background-color: #3ea6ff;
+  color: #ffffff;
+  transition: 0.4s;
+}
 
 /**우측 댓글 섹션**/
 .right_box{
@@ -178,12 +214,86 @@ input:focus{outline: none;}
 .chat_output{
   width: 80%;
   height: 55%;
-  box-shadow: 0px 13px 20px #f0f0f0;
+  box-shadow: 0px 8px 20px #f0f0f0;
+}
+
+.chat_output:hover{
+  box-shadow: 0px 5px 8px #cccccc;
+  transition: 0.5s;
+}
+
+.comment_list {
+  margin: 0 auto;
+  width: 94%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.list_1{
+  width: 100%;
+  height: auto;
+  margin-top: 0.2rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.list_thumnail{
+  min-width: 80px;
+  height: 45px;
+  margin: 8px 0;
+  background-color:cadetblue;
+}
+
+.list_like{
+  min-width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.4rem;
+  color: #cccccc;
+  margin: 0 15px;
+}
+
+.like_number{
+  margin-top: 7px;
+  font-size: 0.7rem;
+}
+
+.list_user_name{
+  width: 100px;
+  height: 20px;
+  margin-bottom: 5px;
+  font-size: 0.8rem;
+  font-weight: 600;
+  line-height: 20px;
+}
+
+.list_user_text{
+  width: 100%;
+  height: auto;
+  font-size: 0.9rem;
+  font-weight: 600;
+  word-break:break-all;
+  letter-spacing: 1px;
+  line-height: 1.2rem;
 }
 
 .chat_rank{
   width: 80%;
   height: 25%;
-  margin-top: 15px;
+  margin-top: 20px;
   box-shadow: 0px 13px 20px #f0f0f0;
+}
+
+.chat_rank:hover{
+  box-shadow: 0px 5px 8px #cccccc;
+  transition: 0.55s;
 }
