--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,16 @@
   <!--헤더-->
   <div class="header">
     <div class="logo"></div>
-    <div class="user_link"></div>
-    <div class="twinkle"></div>
+    <div class="space"></div>
+    <div class="user_link">
+      <input type="text" name="" class="user_link_text" id="" placeholder="🔥 보고싶은 유투브 링크를 추가해주세요 🔥">
+      <input type="submit" class="user_link_button" value="전송하기">
+    </div>
+    <div class="twinkle">
+      <i class="far fa-moon"></i>
+    </div>
+    <input type="submit" class="withdrawal" value="회원탈퇴">
+    <input type="submit" class="logout_button" value="로그아웃">
   </div>
   <!--좌측 비디오 섹션-->
   <div class="left_box">
@@ -43,18 +51,18 @@
       </div>
       <!--좋아요&싫어요-->
       <div class="info_3">
-        <a href="#" class="like">
+        <div class="like">
           <i class="far fa-thumbs-up"></i>
           <p class="info_like_number">
             230,4058
           </p>
-        </a>
-        <a href="#" class="dislike">
+        </div>
+        <div class="dislike">
           <i class="far fa-thumbs-down"></i>
           <p class="info_like_number">
             3058
           </p>
-        </a>
+        </div>
       </div>
     </div>
     <!--유저 댓글 입력-->
@@ -81,144 +89,16 @@
             <p class="like_number">120</p>
           </div>
           <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
+            <div class="list_user_form">
+              <p class="list_user_name">은평구 꿀주먹</p>
+              <i class="far fa-edit"></i>
+              <i class="far fa-trash-alt"></i>
+            </div>
             <p class="list_user_text">
               수많은 게스트가 있었지만 최고는 역시 주펄이다.
             </p>
           </div>
         </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-
       </div>
     </div>
     <div class="chat_rank">
