--- a/static/reset.css
+++ b/static/reset.css
@@ -51,7 +51,7 @@ html, body{
   width: 100%;
   height: 100%;
   font-family: 'Noto Sans KR', 'Roboto', sans-serif;
-  color: #333333;
+  color: #5a5a5a;
   background-color: #ffffff;
 }
 a{
