--- a/static/style.css
+++ b/static/style.css
@@ -3,21 +3,18 @@
   width: 100%;
   height: 10%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   flex-direction: row;
   box-shadow: 0px 3px 20px #f0f0f0;
 }
 
 .logo{
-  width: 10%;
-  height: 50px;
-  background-color: dimgray;
-}
-
-.space{
-  width: 14%;
-  height: 50px;
+  width: 24.5%;
+    height: 32.5px;
+    background-image: url(/commend/99pro_logo.svg);
+    background-repeat: no-repeat;
+    margin-left: 5.5%;
 }
 
 .user_link{
@@ -106,8 +103,8 @@
   font-size: 0.8rem;
 }
 
-.withdrawal{
-  margin-right: 10px;
+.logout_button{
+  margin: 0 5% 0 10px ;
 }
 
 .logout_button:focus, .withdrawal:focus{
