메인페이지-css작업 끝

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,74 @@
         </div>
       </div>
     </div>
+
+    <!--댓글 랭킹-->
     <div class="chat_rank">
+      <div class="chat_rank_list">
+        <!--유저가 작성한 댓글 폼-->
+        <div class="list_1">
+          <a href="#" class="list_thumnail">
+            <img src="" alt="">
+          </a>
+          <div class="list_like">
+            <i class="far fa-thumbs-up" id="rank_gold"></i>
+            <p class="like_number" id="rank_gold">120</p>
+          </div>
+          <div class="list_user_info">
+            <div class="list_user_form">
+              <p class="list_user_name">은평구 꿀주먹</p>
+              <div class="rank_gold"></div>
+            </div>
+            <p class="list_user_text">
+              수많은 게스트가 있었지만 최고는 역시 주펄이다.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="chat_rank_list">
+        <!--유저가 작성한 댓글 폼-->
+        <div class="list_1">
+          <a href="#" class="list_thumnail">
+            <img src="" alt="">
+          </a>
+          <div class="list_like">
+            <i class="far fa-thumbs-up" id="rank_silver"></i>
+            <p class="like_number" id="rank_silver">120</p>
+          </div>
+          <div class="list_user_info">
+            <div class="list_user_form">
+              <p class="list_user_name">은평구 꿀주먹</p>
+              <div class="rank_silver"></div>
+            </div>
+            <p class="list_user_text">
+              수많은 게스트가 있었지만 최고는 역시 주펄이다.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="chat_rank_list">
+        <!--유저가 작성한 댓글 폼-->
+        <div class="list_1">
+          <a href="#" class="list_thumnail">
+            <img src="" alt="">
+          </a>
+          <div class="list_like">
+            <i class="far fa-thumbs-up" id="rank_bronze"></i>
+            <p class="like_number" id="rank_bronze">120</p>
+          </div>
+          <div class="list_user_info">
+            <div class="list_user_form">
+              <p class="list_user_name">은평구 꿀주먹</p>
+              <div class="rank_bronze"></div>
+            </div>
+            <p class="list_user_text">
+              수많은 게스트가 있었지만 최고는 역시 주펄이다.
+            </p>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
