--- a/static/style.css
+++ b/static/style.css
@@ -410,9 +410,37 @@
   height: 25%;
   margin-top: 20px;
   box-shadow: 0px 13px 20px #f0f0f0;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .chat_rank:hover{
   box-shadow: 0px 5px 8px #cccccc;
   transition: 0.55s;
+}
+
+.chat_rank_list{
+  margin: 0 auto;
+  width: 94%;
+  height: auto;
+}
+
+.rank_gold, .rank_silver, .rank_bronze{
+  width: 35px;
+  height: 35px;
+  background-image: url(/commend/number_1.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.rank_silver{
+  background-image: url(/commend/number_2.png);
+}
+
+.rank_bronze{
+  background-image: url(/commend/number_3.png);
+}
+
+#rank_gold, #rank_silver, #rank_bronze{
+  color: #3ea6ff;
 }
