--- a/static/style.css
+++ b/static/style.css
@@ -427,6 +427,10 @@
   overflow-x: hidden;
 }
 
+.chat_rank::-webkit-scrollbar {
+  display: none;
+}
+
 .chat_rank:hover{
   box-shadow: 0px 5px 8px #cccccc;
   transition: 0.55s;
