--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--폰트어썸-->
+  <!--favicon-->
+  <link rel="shortcut icon" type="image/x-icon" href="/commend/favicon.ico">
+  <!--fontawesome-->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <!--reset.css-->
   <link rel="stylesheet" href="/static/reset.css">
   <!--style.css-->
   <link rel="stylesheet" href="/static/style.css">
-  <title>4조-프로젝트</title>
+  <title>분노의 투기장 - ARENA of ANGER</title>
 </head>
 <body>
   <!--헤더-->
