--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/static/reset.css">
   <!--style.css-->
   <link rel="stylesheet" href="/static/style.css">
+  <!--java script-->
+  <script src="/static/index.js"></script>
   <title>분노의 투기장 - ARENA of ANGER</title>
 </head>
 <body>
