--- a/templates/index.html
+++ b/templates/index.html
@@ -61,169 +61,23 @@
     <div class="video_input_chat">
       <div class="user_input_chat">
         <div class="user_pic"></div>
-        <input type="text" name="" class="user_comment" id="" placeholder="공개 댓글 추가....">
+        <input type="text" name="" class="user_comment" id="comment_main_input" placeholder="공개 댓글 추가....">
       </div>
-      <input type="submit" class="user_comment_send" value="댓글">
+      <input type="submit" class="user_comment_send" id="submit_comment" value="댓글">
     </div>
   </div>
 
   <!--우측 코멘트 섹션-->
   <div class="right_box">
     <div class="chat_output">
-      <div class="comment_list">
+      <div class="comment_list" id="comment_list">
         <!--유저가 작성한 댓글 폼-->
-        <div class="list_1">
-          <a href="#" class="list_thumnail">
-            <img src="" alt="">
-          </a>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-        <div class="list_1">
-          <div class="list_thumnail"></div>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <p class="list_user_name">
-              은평구 꿀주먹
-            </p>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다. 수많은 게스트가 있었지만 최고는 역시 주펄이다.수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
-
-
       </div>
     </div>
     <div class="chat_rank">
 
     </div>
   </div>
+  <script src="{{ url_for('static', filename='comment.js') }}"></script>
 </body>
 </html>
