--- a/templates/register.html
+++ b/templates/register.html
@@ -49,7 +49,7 @@
                 success: function (response) {
                     if(response['msg']=='success') {
                         alert('회원가입 완료!')
-                        location.replace('/api/login')
+                        location.replace('/')
                     }
                 }
             })
