메인페이지-next video button-추가

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 /**헤더**/
 .header{
   width: 100%;
-  height: 10%;
+  height: 8%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -16,6 +16,15 @@
     background-image: url(/commend/99pro_logo.svg);
     background-repeat: no-repeat;
     margin-left: 5.5%;
+}
+
+.logo_2{
+  width: 24.5%;
+  height: 32.5px;
+  background-image: url(/commend/99pro_logo_w.svg);
+  background-repeat: no-repeat;
+  margin-left: 5.5%;
+  display: none;
 }
 
 .user_link{
@@ -126,7 +135,7 @@
 /**좌측 비디오 섹션**/
 .left_box{
   width: 55%;
-  height: 90%;
+  height: 92%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -137,6 +146,26 @@
   -moz-animation: fadein 2.25s;
   -webkit-animation: fadein 2.25s;
   -o-animation: fadein 2.25s;
+}
+
+.next_video {
+  width: 110px;
+  height: 40px;
+  margin-left: 37.5vw;
+  margin-bottom: 12px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  color: #5a5a5a;
+  font-size: 0.8rem;
+}
+
+.next_video:hover{
+  color: #ffffff;
+  background-color: #3ea6ff;
+  transition: 0.35s;
 }
 
 .video_play{
@@ -268,16 +297,16 @@
   width: 94%;
   height: 35px;
   border: none;
-  border-bottom: 1.5px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
 }
 
 .user_comment:focus{
   outline: none;
-  border-bottom: 1.8px solid #3ea6ff;
+  border-bottom: 1.5px solid #3ea6ff;
 }
 
 .user_comment:hover{
-  border-bottom: 1.8px solid #3ea6ff;
+  border-bottom: 1.5px solid #3ea6ff;
   transition: 0.6s;
 }
 
@@ -303,7 +332,7 @@
 /**우측 댓글 섹션**/
 .right_box{
   width: 45%;
-  height: 90%;
+  height: 92%;
   display: flex;
   justify-content: center;
   align-items: center;
