--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
   <!--헤더-->
   <div class="header">
     <div class="logo"></div>
+    <div class="logo_2"></div>
     <div class="user_link">
       <input type="text" name="" class="user_link_text" id="place" placeholder="🔥 보고싶은 유투브 링크를 추가해주세요 🔥">
       <input type="submit" class="user_link_button" value="전송하기">
@@ -28,12 +29,13 @@
     <div class="twinkle" onclick="onoff()">
       <i class="far fa-moon"></i>
     </div>
-    <input type="submit" class="withdrawal" value="회원탈퇴">
+    <input type="submit" class="withdrawal" id="test" value="회원탈퇴">
     <input type="submit" class="logout_button" value="로그아웃">
   </div>
   <!--좌측 비디오 섹션-->
   <div class="left_box">
     <!--랜덤 동영상-->
+    <div class="next_video">다음영상 👉</div>
     <div class="video_play">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Qlm12sRtClM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
