--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>로그인 페이지</title>
@@ -7,8 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="/static/reset.css">
+    <link rel="stylesheet" href="/static/login.css">
 
     <script type="text/javascript">
 
@@ -33,21 +33,19 @@
             })
         }
     </script>
+
 </head>
+
 <body>
-    <section class="hero is-info">
+<div class="background">
+    <section class="hero is-info" id="login_contain">
       <div class="hero-body">
-        <p class="title">
-          Login Page
-        </p>
-        <p class="subtitle">
-          로그인 정보를 입력해주세요
-        </p>
+        <div class="title"></div>
       </div>
     </section>
 
-    <div style="margin-top: 73px" class="field">
-      <p class="control has-icons-left has-icons-right">
+    <div class="field">
+      <p class="control has-icons-left has-icons-right" id="user_input_id">
         <input id="input_id" class="input" type="email" placeholder="Email을 입력해주세요">
         <span class="icon is-small is-left">
           <i class="fas fa-envelope"></i>
@@ -70,7 +68,12 @@
         <button class="button is-success" onclick="login_info()">
           Login
         </button>
+        <!--회원가입 버튼-->
+        <button class="button is-success" onclick="login_info()">
+          회원가입
+        </button>
       </p>
     </div>
+</div>   
 </body>
 </html>
