index 레이아웃필요

--- a/static/style.css
+++ b/static/style.css
@@ -362,6 +362,10 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column-reverse;
 }
 
 .comment_list::-webkit-scrollbar {
