--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
     <div class="logo"></div>
     <div class="logo_2"></div>
     <div class="user_link">
-      <input type="text" name="" class="user_link_text" id="place" placeholder="🔥 보고싶은 유투브 링크를 추가해주세요 🔥">
-      <input type="submit" class="user_link_button" value="전송하기">
+      <input type="text" name="" class="user_link_text" id="url-input" placeholder="🔥 보고싶은 유투브 링크를 추가해주세요 🔥">
+      <input type="submit" class="user_link_button" id="url-button" value="전송하기">
     </div>
     <div class="twinkle" onclick="onoff()">
       <i class="far fa-moon"></i>
@@ -33,52 +33,19 @@
     <input type="submit" class="logout_button" value="로그아웃">
   </div>
   <!--좌측 비디오 섹션-->
-  <div class="left_box">
+  <div class="next_video" id="next_video">다음영상 👉</div>
+  <div class="left_box" id="left_box">
     <!--랜덤 동영상-->
-    <div class="next_video">다음영상 👉</div>
-    <div class="video_play">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Qlm12sRtClM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  </div>
+  <div class="video_input_chat">
+
+    <div class="user_input_chat">
+      <div class="user_pic"></div>
+      <input type="text" name="" class="user_comment" id="comment_main_input" placeholder="공개 댓글 추가....">
     </div>
-    <!--동영상정보-->
-    <div class="video_information">
-      <!--동영상정보: 실시간 순위 / 동영상 제목 / 좋아요&싫어요-->
-      <div class="info_1">
-        <p class="rank_text">⚔️ 분노의 투기장 - ARENA of ANGER ⚔️</p>
-        <p class="name_text">독기 가득 충전해온 주호민</p>
-        <p class="views_text">조회수 554,905회 2021. 10. 30.</p>
-      </div>
-      <!--유투버사진 / 유투버이름 / 구독자 숫자-->
-      <div class="info_2">
-        <div class="youtuber_pic"></div>
-        <div class="youtuber_info">
-          <p class="youtuber_name_text">침착맨</p>
-          <p class="subscriber_number">구독자 127만명</p>
-        </div>
-      </div>
-      <!--좋아요&싫어요-->
-      <div class="info_3">
-        <div class="like" onclick="like_color_change_blue()">
-          <i class="far fa-thumbs-up"  id="like_color_change"></i>
-          <p class="info_like_number" id="like_color_change_2">
-            230,4058
-          </p>
-        </div>
-        <div class="dislike" onclick="like_color_change_red()">
-          <i class="far fa-thumbs-down" id="dislike_color_change"></i>
-          <p class="info_like_number" id="dislike_color_change_2">
-            3058
-          </p>
-        </div>
-      </div>
-    </div>
-    <!--유저 댓글 입력-->
-    <div class="video_input_chat">
-      <div class="user_input_chat">
-        <div class="user_pic"></div>
-        <input type="text" name="" class="user_comment" id="comment_main_input" placeholder="공개 댓글 추가....">
-      </div>
-      <input type="submit" class="user_comment_send" id="submit_comment" value="댓글">
-    </div>
+    <input type="submit" class="user_comment_send" id="submit_comment" value="댓글">
+
   </div>
 
   <!--우측 코멘트 섹션-->
@@ -86,31 +53,12 @@
     <div class="chat_output">
       <div class="comment_list" id="comment_list">
         <!--유저가 작성한 댓글 폼-->
-<<<<<<< HEAD
-        <div class="list_1">
-          <a href="#" class="list_thumnail">
-            <img src="" alt="">
-          </a>
-          <div class="list_like">
-            <i class="far fa-thumbs-up"></i>
-            <p class="like_number">120</p>
-          </div>
-          <div class="list_user_info">
-            <div class="list_user_form">
-              <p class="list_user_name">은평구 꿀주먹</p>
-              <i class="far fa-edit"></i>
-              <i class="far fa-trash-alt"></i>
-            </div>
-            <p class="list_user_text">
-              수많은 게스트가 있었지만 최고는 역시 주펄이다.
-            </p>
-          </div>
-        </div>
       </div>
+
     </div>
 
     <!--댓글 랭킹-->
-    <div class="chat_rank">
+    <div class="chat_rank" id="chat_rank">
       <div class="chat_rank_list">
         <!--유저가 작성한 댓글 폼-->
         <div class="list_1">
@@ -175,12 +123,11 @@
             </p>
           </div>
         </div>
-=======
->>>>>>> origin/develop
       </div>
 
     </div>
   </div>
   <script src="{{ url_for('static', filename='comment.js') }}"></script>
+  <script src="{{ url_for('static', filename='video.js') }}"></script>
 </body>
 </html>
