로그인페이지 및 회원가입페이지 api 연동

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,28 +10,8 @@
     <link rel="stylesheet" href="/static/reset.css">
     <link rel="stylesheet" href="/static/login.css">
 
-    <script type="text/javascript">
+    <script type="text/javascript" src="/static/login.js">
 
-        function login_info() {
-            let email = $('#input_id').val();
-            let pw = $('#input_pw').val();
-
-            $.ajax({
-                type:'POST',
-                url:'/api/login',
-                data:{email:email, password:pw},
-                success: function (response) {
-                    if(response['msg']=='success') {
-                        $.cookie('mytoken', response['token']);
-                        alert('환영합니다!')
-                        localStorage.setItem('jwt',response['token'])
-                        window.location.href = '/home'
-                    } else {
-                        alert('ID와 비밀번호를 확인해주세요!')
-                    }
-                }
-            })
-        }
     </script>
 
 </head>
@@ -69,7 +49,7 @@
           Login
         </button>
         <!--회원가입 버튼-->
-        <button class="button is-success" onclick="login_info()">
+        <button class="button is-success" onclick="signIn()">
           회원가입
         </button>
       </p>
